code tags alignment fixed

--- a/css/documentation.css
+++ b/css/documentation.css
@@ -44,19 +44,17 @@ body{
     color: #fff;
 }
 
-code{
-    display: block;
-    padding: 1rem 0rem;
-    margin: 0.5rem;
+p{
+    text-align: justify;
+}
+
+pre{
+    padding: 0.3em;
+    margin: 0.1em 2em;
     border-radius: 0.6rem;
-    white-space: pre;
-    background: #eee;
+    background: #eaeaea;
+    overflow-x: auto;
 }
-
-#main-doc code{
-    text-align: left;
-}
-
 
 #slide-bar, #close-nav{
     display: none;
@@ -104,6 +102,7 @@ footer a{
     color: coral;
     text-decoration: none;
 }
+
 /* mobile version */
 @media(max-width: 768px){
     #slide-bar{
@@ -185,7 +184,12 @@ footer a{
         font-size: 90%;
     }
 
+    /* shift the code blocks to the left a bit on smaller screen */
     code{
-    font-size: 85%;
+        display: block;
+        position: relative;
+        left: -10em;
+        margin: -2em 0 -3em 0; 
     }
+
 }
